--- a/src/br/com/metashape/view/BuscarProfissional.form
+++ b/src/br/com/metashape/view/BuscarProfissional.form
@@ -151,8 +151,8 @@
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="4">
-                <Column editable="true" title="Nome Fantasia" type="java.lang.Object"/>
-                <Column editable="true" title="CNPJ" type="java.lang.Object"/>
+                <Column editable="true" title="Nome " type="java.lang.Object"/>
+                <Column editable="true" title="Matricula" type="java.lang.Object"/>
                 <Column editable="true" title="E-mail" type="java.lang.Object"/>
                 <Column editable="true" title="Endere&#xe7;o" type="java.lang.Object"/>
                 <Column editable="true" title="Estado" type="java.lang.Object"/>
